<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard_destination"
        android:icon="@drawable/ic_dashboard"
        android:orderInCategory="1"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/transaction_destination"
        android:icon="@drawable/ic_transactions"
        android:orderInCategory="2"
        android:title="@string/transactions" />

    <item
        android:id="@+id/loan_destination"
        android:icon="@drawable/ic_loans"
        android:orderInCategory="3"
        android:title="@string/loans" />

    <item android:id="@+id/credit_card_destination"
        android:icon="@drawable/ic_credit_card"
        android:orderInCategory="4"
        android:title="@string/credit_cards" />

    <item
        android:id="@+id/settings_destination"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="5"
        android:title="@string/settings" />

</menu>