<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.bottom_sheets.TransferBottomSheetFragment">

    <!-- LL M Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <!-- Title -->
        <TextView
            android:id="@+id/transferTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_funds"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/_20ssp" />

        <!-- Recipient -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipient_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipientInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Amount -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- transfer button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/transferButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/transfer"
            app:backgroundTint="?attr/colorPrimary"
            app:cornerRadius="@dimen/_8sdp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>