<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_35sdp"
    tools:context=".ui.fragments.bottom_sheets.WithdrawBottomSheetFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/withdrawTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_funds"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_20ssp" />

    <!-- Recipient -->

    <!-- Amount -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Description -->

    <!-- withdraw button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/withdraw"
        app:backgroundTint="?attr/colorPrimary"
        app:cornerRadius="@dimen/_8sdp" />
</LinearLayout>