<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_8sdp"
    app:strokeColor="?colorPrimary"
    app:strokeWidth="@dimen/_1sdp"
    tools:context=".ui.views.CreditCardView">

    <!-- Background -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2sdp"
        android:background="@drawable/shape_gradient_background">

        <!-- Chip Icon -->
        <ImageView
            android:id="@+id/card_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_chip_fit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardType_logo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:fontFamily="@font/inter_regular"
            android:padding="@dimen/_2sdp"
            android:text="@string/visa"
            android:textColor="#FFB300"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap" />

        <!-- Card Number -->
        <TextView
            android:id="@+id/card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/placeholder_card_number"
            android:textColor="@color/md_theme_primaryFixed"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Holder Name -->
        <TextView
            android:id="@+id/card_holder_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_55sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/placeholder_name"
            android:textColor="@color/md_theme_primaryFixed"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_number_tv" />

        <!-- Expiry Date -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/placeholder_expire_date"
            android:textColor="@color/md_theme_primaryFixed"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>