<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <!-- Login Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_32sdp"
        app:cardElevation="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="@dimen/_2sdp">

        <!-- Card Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_24sdp">

            <!-- App Logo (Optional) -->
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:contentDescription="@string/the_app_logo"
                android:src="@mipmap/ic_launcher"
                app:roundPercent="25" />

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="Account's username"
                app:helperTextTextColor="?attr/colorOnSurface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="Account's password"
                app:helperTextTextColor="?attr/colorOnSurface">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorOnSurface" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/login"
                android:textColor="?attr/colorOnPrimaryContainer"
                app:backgroundTint="?attr/colorPrimaryContainer"
                app:cornerRadius="@dimen/_32sdp"
                app:icon="@drawable/ic_login"
                app:iconPadding="@dimen/_8sdp" />

            <!-- Forgot Password and Create Account Links -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Forgot Password -->
                <TextView
                    android:id="@+id/forgotPassword"
                    style="@style/SelectableItemBackgroundStyle"
                    android:textSize="@dimen/_8ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/forgot_password"
                    android:textColor="?attr/colorPrimaryDark" />

                <!-- Create New Account -->
                <TextView
                    android:id="@+id/createAccount"
                    style="@style/SelectableItemBackgroundStyle"
                    android:textSize="@dimen/_8ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="?attr/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>